@@ -1,3 +1,8 @@
+The following major changes have been made since 0.9.8:
+
+ *) Re-support build without CONFIG_TRACEPOINTS (was broken in 0.9.8)
+
+
 The following major changes have been made between LKRG 0.9.7 and 0.9.8:
 
  *) Add optional remote kernel message logging, including the sending component
